--- a/Innovate_Feedback/app/src/main/res/navigation/navigation.xml
+++ b/Innovate_Feedback/app/src/main/res/navigation/navigation.xml
@@ -18,23 +18,8 @@
             app:popExitAnim="@anim/slide_out_left" />
 
         <action
-            android:id="@+id/action_titleFragment_to_feedbackFragment"
+            android:id="@+id/action_titletFragment_to_feedbackFragment"
             app:destination="@id/feedbackFragment"
-            app:enterAnim="@anim/slide_in_left"
-            app:exitAnim="@anim/slide_out_right"
-            app:popEnterAnim="@anim/slide_in_right"
-            app:popExitAnim="@anim/slide_out_left" />
-
-
-    </fragment>
-    <fragment
-        android:id="@+id/aboutFragment"
-        android:name="com.tc2r1.android.nudennie_white_boilerplate.fragment.AboutFragment"
-        android:label="@string/about"
-        tools:layout="@layout/fragment_about">
-        <action
-            android:id="@+id/action_aboutFragment_to_titleFragment"
-            app:destination="@id/titleFragment"
             app:enterAnim="@anim/fade_in"
             app:exitAnim="@anim/fade_out"
             app:launchSingleTop="false"
@@ -43,11 +28,33 @@
             app:popUpTo="@id/titleFragment"
             app:popUpToInclusive="true" />
     </fragment>
-
     <fragment
         android:id="@+id/feedbackFragment"
         android:name="com.tc2r1.android.nudennie_white_boilerplate.fragment.FeedbackFragment"
-        android:label="@string/feedback"
-        tools:layout="@layout/fragment_feedback_comments">
+        android:label="@string/app_name"
+        tools:layout="@layout/fragment_title">
+        <action
+            android:id="@+id/action_aboutFragment_to_feedbackFragment"
+            app:destination="@id/feedbackFragment"
+            app:enterAnim="@anim/slide_in_left"
+            app:exitAnim="@anim/slide_out_right"
+            app:popEnterAnim="@anim/slide_in_right"
+            app:popExitAnim="@anim/slide_out_left" />
+    </fragment>
+    <fragment
+        android:id="@+id/aboutFragment"
+        android:name="com.tc2r1.android.nudennie_white_boilerplate.fragment.AboutFragment"
+        android:label="@string/about"
+        tools:layout="@layout/fragment_about">
+        <action
+            android:id="@+id/action_aboutFragment_to_feedbackFragment"
+            app:destination="@id/feedbackFragment"
+            app:enterAnim="@anim/fade_in"
+            app:exitAnim="@anim/fade_out"
+            app:launchSingleTop="false"
+            app:popEnterAnim="@anim/fade_in"
+            app:popExitAnim="@anim/fade_out"
+            app:popUpTo="@id/titleFragment"
+            app:popUpToInclusive="true" />
     </fragment>
 </navigation>
