--- a/Innovate_Feedback/app/src/main/res/layout/fragment_rating.xml
+++ b/Innovate_Feedback/app/src/main/res/layout/fragment_rating.xml
@@ -19,18 +19,9 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.tc2r1.android.navigation.TitleFragment">
+    tools:context="com.tc2r1.innovate.navigation.TitleFragment">
 
     <data>
-
-        <variable
-            name="tempObject"
-            type="com.tc2r1.android.nudennie_white_boilerplate.data.TempObject" />
-
-
-        <variable
-            name="title"
-            type="com.tc2r1.android.nudennie_white_boilerplate.fragment.TitleFragment" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
