--- a/Innovate_Feedback/app/src/main/res/navigation/navigation.xml
+++ b/Innovate_Feedback/app/src/main/res/navigation/navigation.xml
@@ -2,59 +2,53 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:startDestination="@id/titleFragment">
+    app:startDestination="@id/homeFragment">
 
     <fragment
         android:id="@+id/titleFragment"
-        android:name="com.tc2r1.android.nudennie_white_boilerplate.fragment.TitleFragment"
+        android:name="com.tc2r1.innovate.pilotfeedback.fragment.RatingFragment"
         android:label="@string/app_name"
-        tools:layout="@layout/fragment_title">
+        tools:layout="@layout/fragment_rating">
         <action
-            android:id="@+id/action_titleFragment_to_aboutFragment"
-            app:destination="@id/aboutFragment"
-            app:enterAnim="@anim/slide_in_left"
-            app:exitAnim="@anim/slide_out_right"
-            app:popEnterAnim="@anim/slide_in_right"
-            app:popExitAnim="@anim/slide_out_left" />
-
-        <action
-            android:id="@+id/action_titletFragment_to_feedbackFragment"
+            android:id="@+id/action_ratingFragment_to_feedbackFragment"
             app:destination="@id/feedbackFragment"
             app:enterAnim="@anim/fade_in"
             app:exitAnim="@anim/fade_out"
             app:launchSingleTop="false"
             app:popEnterAnim="@anim/fade_in"
             app:popExitAnim="@anim/fade_out"
-            app:popUpTo="@id/titleFragment"
+            app:popUpTo="@id/homeFragment"
             app:popUpToInclusive="true" />
     </fragment>
+
     <fragment
         android:id="@+id/feedbackFragment"
-        android:name="com.tc2r1.android.nudennie_white_boilerplate.fragment.FeedbackFragment"
+        android:name="com.tc2r1.innovate.pilotfeedback.fragment.FeedbackFragment"
         android:label="@string/app_name"
-        tools:layout="@layout/fragment_title">
+        tools:layout="@layout/fragment_rating">
         <action
-            android:id="@+id/action_aboutFragment_to_feedbackFragment"
-            app:destination="@id/feedbackFragment"
+            android:id="@+id/action_feedbackFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
             app:enterAnim="@anim/slide_in_left"
             app:exitAnim="@anim/slide_out_right"
             app:popEnterAnim="@anim/slide_in_right"
-            app:popExitAnim="@anim/slide_out_left" />
+            app:popExitAnim="@anim/slide_out_left"
+            app:popUpTo="@id/titleFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
-        android:id="@+id/aboutFragment"
-        android:name="com.tc2r1.android.nudennie_white_boilerplate.fragment.AboutFragment"
+        android:id="@+id/homeFragment"
+        android:name="com.tc2r1.innovate.pilotfeedback.fragment.HomeFragment"
         android:label="@string/about"
-        tools:layout="@layout/fragment_about">
+        tools:layout="@layout/fragment_home">
         <action
-            android:id="@+id/action_aboutFragment_to_feedbackFragment"
-            app:destination="@id/feedbackFragment"
+            android:id="@+id/action_homeFragment_to_titleFragment"
+            app:destination="@id/titleFragment"
             app:enterAnim="@anim/fade_in"
             app:exitAnim="@anim/fade_out"
             app:launchSingleTop="false"
             app:popEnterAnim="@anim/fade_in"
-            app:popExitAnim="@anim/fade_out"
-            app:popUpTo="@id/titleFragment"
-            app:popUpToInclusive="true" />
+            app:popExitAnim="@anim/fade_out"/>
+
     </fragment>
 </navigation>
